Add functionality for numbers to display when clicked on dialer

--- a/phone.css
+++ b/phone.css
@@ -11,3 +11,5 @@ td:hover {background-color: silver;}
 #add_contact {margin-left: 350px;}
 input {margin-bottom: 40px; background: #99e8e5; height: 30px;}
 #submit:hover {background-color: silver;}
+
+#inputText {margin-left: 40px;}
